Added max retries / waiting for retry (#438)